[package]
name = "xtask"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = "4"
anyhow = "1"
duct = "0.13.7"
glob = "0.3.1"
fs_extra = "1"
dialoguer = "^0.11.0"
xtaskops = { path = "../xtaskops" }
