[package]
name = "xtaskops"
version = "0.5.0"
edition = "2021"

description = "Goodies for working with the xtask concept"
authors = ["Dotan Nahum <dotan@rng0.io>"]
documentation = "https://docs.rs/xtaskops"
repository = "https://github.com/jondot/xtaskops"
categories = ["development-tools"]
keywords = ["xtask"]
license = "Apache-2.0"
readme = "../README.md"

[features]
default = ["clap"]
clap = ["dep:clap"]

[dependencies]
derive_builder = "^0.20.2"
anyhow = "1"
duct = "0.13.7"
glob = "0.3.1"
fs_extra = "1.3.0"
dialoguer = "^0.11.0"

clap = { version = "4", optional = true }


[dev-dependencies]
